handling fetch error

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <!-- ChartJS -->
     <script src="%PUBLIC_URL%/plugins/chart.js/Chart.min.js"></script>
     <!-- Sparkline -->
-    <script src="%PUBLIC_URL%/plugins/sparklines/sparkline.js"></script>
+    <!-- <script src="%PUBLIC_URL%/plugins/sparklines/sparkline.js"></script> -->
     <!-- JQVMap -->
     <script src="%PUBLIC_URL%/plugins/jqvmap/jquery.vmap.min.js"></script>
     <script src="%PUBLIC_URL%/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
@@ -91,9 +91,9 @@
     <!-- AdminLTE App -->
     <script src="%PUBLIC_URL%/assets/js/adminlte.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="%PUBLIC_URL%/assets/js/demo.js"></script>
+    <!-- <script src="%PUBLIC_URL%/assets/js/demo.js"></script> -->
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="%PUBLIC_URL%/assets/js/pages/dashboard.js"></script>
+    <!-- <script src="%PUBLIC_URL%/assets/js/pages/dashboard.js"></script> -->
 
   </body>
 </html>
